[TAP] is T. Alexander Popiel, a former PennMUSH developer (aka Talek)
[3] refers to code by (or inspired by) TinyMUSH 3.0
[MUX] refers to code by (or inspired by) TinyMUX 2.x
[Rhost] refers to code by (or inspired by) RhostMUSH

==========================================================================

Version 1.8.3 patchlevel 11                     ??? ??, 2009
Functions:
  * testlock(<boolexp>, <victim>) tests a lock without setting it.
    Suggested by Mercutio@M*U*S*H. [GM]

Fixes:
 * fun_merge() was eating characters when ansi was present. Reported
   by Nammyung. Fixed. [GM]
 * Windows compile fixes.
 * page/port didn't evaluate its arguments properly. Reported
   by adkins@drigon.com. [SW]

Tools:
 * New script in utils/ for searching change logs: grep-cl.pl [SW]

Version 1.8.3 patchlevel 10                     Aug 24, 2009

Major changes:
 * Switched project management (Bug tracking, revision control, etc.)
   to Google Code. See http://code.google.com/p/pennmush

Minor changes:
 * @search and lsearch() now only charge 100 pennies if an evaluating
   search (EVAL, EPLAYER, EROOM, ETHING, EOBJECT, EEXIT or ELOCK) or
   an exhaustive attribute search (COMMAND, LISTEN) is performed.
 * The %u sub now works for built-in commands, as well as $-commands.
   Useful for @hooks. [MG]
 * The use command now understands english matching. Suggested by
   Yuriko.
 * Rooms can now use @open/open(). [MG]
 * Mortals can now use '@attribute <attrib>' to see the default flags
   of a standard attribute. [MG]
 * @channel/priv now uses 'thing' instead of 'object' for channels
   which allow things to join. 'object' is kept as an alias. [MG]
 * The chatdb now saves channel buffers and mogrifier objects, so you
   don't need to put @chan/buffer or @chan/mogrifier in @startup. [MG]

Flags:
 * The HEAR_CONNECT flag is now used (instead of MONITOR) to allow
   players to see 'GAME: Foo has [dis]connected.' messages. MONITOR