@@ -1557,6 +1557,7 @@ do_decompile(dbref player, const char *xname, const char *prefix,
   dbref thing;
   const char *object = NULL;
   char *attrib, *name;
+  char *attrname;
   char dbnum[40];
 
   /* @decompile must always have an argument */
@@ -1585,16 +1586,19 @@ do_decompile(dbref player, const char *xname, const char *prefix,
 
   /* if we have an attribute arg specified, wild match on it */
   if (attrib && *attrib) {
-    switch (dbflag) {
-    case DEC_DB:
-      decompile_atrs(player, thing, dbnum, attrib, prefix, skipdef);
-      break;
-    default:
-      if (IsRoom(thing))
-        decompile_atrs(player, thing, "here", attrib, prefix, skipdef);
-      else
-        decompile_atrs(player, thing, Name(thing), attrib, prefix, skipdef);
-      break;
+    attrname = attrib;
+    while (attrib = split_token(&attrname, ' ')) {
+      switch (dbflag) {
+      case DEC_DB:
+        decompile_atrs(player, thing, dbnum, attrib, prefix, skipdef);
+        break;
+      default:
+        if (IsRoom(thing))
+          decompile_atrs(player, thing, "here", attrib, prefix, skipdef);
+        else
+          decompile_atrs(player, thing, Name(thing), attrib, prefix, skipdef);
+        break;
+      }
     }
     mush_free(name, "dd.string");
     return;
